--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "joi": "^17.10.0",
+    "mongoose": "^7.5.0",
     "nodemon": "^3.0.1"
   }
 }
