--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "config": "^3.3.9",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
