--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.5.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "winston": "^3.10.0",
+    "winston-mongodb": "^5.1.1"
   }
 }
