--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "config": "^3.3.9",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jest": "^29.7.0",
     "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
